crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/nested/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

contract C {
    function f() external pure returns (function () internal returns (function () public)) {}
}
